--- a/.travis.yml
+++ b/.travis.yml
@@ -21,22 +21,28 @@ matrix:
       env: SYMFONY_VERSION=4.0.*
     - php: 7.2
       env: SYMFONY_VERSION=3.4.*
+    - php 7.2
+      env:
+        - SYMFONY_VERSION=4.0.*
+        - FLYSYSTEM_VERSION=1.0.*
+        - SIMPLE_PHPUNIT_PARAMETERS=" --stop-on-skipped"
     - php: 7.2
       env: SYMFONY_VERSION=dev-master
     - php: nightly
       env: SYMFONY_VERSION=4.0.*
-  allow_failures: 
+  allow_failures:
     - env: SYMFONY_VERSION=dev-master
     - php: nightly
-    
+
 before_install:
   - bash ./.travis/exec-before.bash
 
 install:
   - travis_retry composer require "symfony/symfony:${SYMFONY_VERSION}" $COMPOSER_FLAGS
+  - if [[ "$FLYSYSTEM_VERSION" != "" ]]; then travis_retry composer require "league/flysystem:${FLYSYSTEM_VERSION}" --no-update; fi;
 
 script:
-  - ./vendor/bin/simple-phpunit -vvv
+  - ./vendor/bin/simple-phpunit -vvv $SIMPLE_PHPUNIT_PARAMETERS
 
 after_script:
   - bash ./.travis/exec-after.bash
